--- a/RomRepoMgr.Blazor/Components/Dialogs/ImportDats.razor
+++ b/RomRepoMgr.Blazor/Components/Dialogs/ImportDats.razor
@@ -1,10 +1,13 @@
+@using Microsoft.Extensions.Localization
+@using RomRepoMgr.Blazor.Resources
 @implements IDialogContentComponent
-@inject ILogger<ImportDats> Logger
+@inject ILogger<ImportDats>            Logger
+@inject IStringLocalizer<Localization> Localizer
 
 <FluentDialog Width="800px" Height="400px" Title="Import DATs" Modal="true" TrapFocus="true">
     <FluentDialogBody>
         <div>
-            <p hidden="@IsBusy">DAT files will be imported from @path.</p>
+            <p hidden="@IsBusy">@string.Format(Localizer["DATs_will_be_imported_from"], path)</p>
             <FluentLabel Color="@StatusColor">@StatusMessage</FluentLabel>
             <FluentProgress Max="@ProgressMax" Min="@ProgressMin" Value="@ProgressValue" Visible="@ProgressVisible"/>
         </div>
@@ -18,8 +21,8 @@
     </FluentDialogBody>
     <FluentDialogFooter>
         <FluentStack Orientation="Orientation.Horizontal">
-            <FluentButton OnClick="@Start" Disabled="@IsBusy">Start</FluentButton>
-            <FluentButton OnClick="@CloseAsync" Disabled="@CannotClose">Close</FluentButton>
+            <FluentButton OnClick="@Start" Disabled="@IsBusy">@Localizer["Start"]</FluentButton>
+            <FluentButton OnClick="@CloseAsync" Disabled="@CannotClose">@Localizer["Close"]</FluentButton>
         </FluentStack>
     </FluentDialogFooter>
 </FluentDialog>
