--- a/RomRepoMgr.Blazor/Components/Routes.razor
+++ b/RomRepoMgr.Blazor/Components/Routes.razor
@@ -1,7 +1,8 @@
-﻿<FluentDesignTheme StorageName="theme" Mode="DesignThemeModes.Dark">
+﻿@using RomRepoMgr.Blazor.Components.Layout
+<FluentDesignTheme StorageName="theme" Mode="DesignThemeModes.Dark">
     <Router AppAssembly="typeof(Program).Assembly">
         <Found Context="routeData">
-            <RouteView DefaultLayout="typeof(Layout.MainLayout)" RouteData="routeData"/>
+            <RouteView DefaultLayout="typeof(MainLayout)" RouteData="routeData"/>
             <FocusOnNavigate RouteData="routeData" Selector="h1"/>
         </Found>
     </Router>
