--- a/RomRepoMgr.Blazor/Components/Dialogs/ImportRoms.razor
+++ b/RomRepoMgr.Blazor/Components/Dialogs/ImportRoms.razor
@@ -1,3 +1,4 @@
+@using Microsoft.Extensions.Localization
 @using RomRepoMgr.Blazor.Resources
 @using RomRepoMgr.Database
 @implements IDialogContentComponent
